Speaker dialog overflow fixed and icons fixed

--- a/src/app/components/home-page/home-page.component.sass
+++ b/src/app/components/home-page/home-page.component.sass
@@ -109,21 +109,23 @@
 .btn-facebook
   color:#fff!important
   background-color:#3b5998!important
+  margin-right: 30px
 .btn-slack
   color:#fff!important
-  background-color:#dd4b39!important
+  background-color:#007bb6!important
+  margin-right: 30px
 .btn-youtube
   color:#fff!important
   background-color:#ff4b39!important
 .btn-meetup
   color:#fff!important
-  background-color:#007bb6!important
+  background-color:#dd4b39!important
+  margin-right: 30px
 .btn-twitter
   color:#fff!important
   background-color:#55acee!important
-.btn-mail
-  color:#fff!important
-  background-color:#512DA8!important
+  margin-right: 30px
+
   
 iframe 
   position: relative
