--- a/src/styles.sass
+++ b/src/styles.sass
@@ -38,9 +38,10 @@ body
     border-radius: 15px
     background: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,1)), url('/assets/images/bg.png') !important
     background-size: cover
-    padding: 0px
+    padding: 15px
     display: flex
     flex-direction: column
+    overflow-x: hidden
 
 ::-webkit-scrollbar
   width: 10px
